# omniglot-mpk

./: .gitignore  AUTHORS.md  Cargo.toml  README.md  generate-libpng-sandcrust-omniglot-comparison-plot.py  node-setup.sh  osdi25-eval-reproduce.sh  rust-toolchain.toml  shell.nix
examples/brotli/: Cargo.toml  brotli.omniglot.toml  build.rs  wrapper.h
examples/brotli/benches/: brotli_compression_comparison.rs
examples/brotli/src/: lib.rs
examples/libpng/: Cargo.toml  build.rs  generate-test-images.sh  libpng.omniglot.toml  libpng_nojmp.c  libpng_nojmp.h
examples/libpng/benches/: libpng_decode_comparison.rs
examples/libpng/src/: lib.rs  og_mpk.rs  unsafe_ffi.rs
examples/libpng/test-images/: README.md
examples/libsodium/: Cargo.toml  build.rs  libsodium.omniglot.toml
examples/libsodium/benches/: sodium_hash_comparison.rs
examples/libsodium/src/: lib.rs
examples/ubench/: Cargo.toml  build.rs  ogdemo.omniglot.toml
examples/ubench/benches/: callback_ubench.rs  invoke_ubench.rs  process_startup_demo_nop.rs  process_startup_demo_nop_og_mpk.rs  process_startup_demo_nop_sandcrust.rs  process_startup_demo_nop_unsafe.rs  upgrade_ubench.rs  validation_ubench.rs
examples/ubench/c_src/: ogdemo.c  ogdemo.h
examples/ubench/src/: lib.rs
omniglot-mpk/: Cargo.toml  build.rs
omniglot-mpk/src/: lib.rs  libc_bindings.rs  omniglot_mpk_loader_stub.c  omniglot_mpk_rt.c  omniglot_mpk_rt.h  pkey_alloc.rs  sys_mman_wrapper.h
osdi25-eval-sample-outputs/: brotli_checked_1745856235.json  brotli_unchecked_1745856898.json  libpng_checked_1745862128.json  libpng_unchecked_1745867435.json  sodium_checked_checkpoint.json  sodium_unchecked_checkpoint.json  ubench_callback_checkpoint.json  ubench_invoke_1745854761.json  ubench_setup_checkpoint.json  ubench_upgrade_1745856032.json  ubench_validation_checkpoint.json
util/: fsgsbase_enabled.c
