[workspace]
resolver = "2"
members = [
    "omniglot-mpk",
    "examples/brotli",
    "examples/libpng",
    "examples/libsodium",
    "examples/ubench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies.omniglot]
git = "https://github.com/omniglot-rs/omniglot"
rev = "a9cda47f9c0f8ce943fef63b139dcf960687a1a2"
# path = "../omniglot"
features = [ "std" ]

[workspace.dependencies.bindgen]
git = "https://github.com/omniglot-rs/rust-bindgen"
rev = "568c9c50f876776a46a82568c69217d8e70d1781"
# path = "../rust-bindgen/bindgen"

[workspace.dependencies.sandcrust]
git = "https://github.com/atopia/sandcrust"
rev = "9d75f9e966d4216d8a858f10639483f05ce4706b"
