[package]
name = "og_libsodium"
version = "0.1.0"
edition = "2021"

[features]
disable_upgrade_checks = ["omniglot/unsound", "omniglot/disable_upgrade_checks"]
disable_validation_checks = ["omniglot/unsound", "omniglot/disable_validation_checks"]

[build-dependencies]
bindgen.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
sandcrust.workspace = true

[dependencies]
omniglot.workspace = true
omniglot-mpk = { path = "../../omniglot-mpk" }

clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"

[[bench]]
name = "sodium_hash_comparison"
harness = false
