[package]
name = "og_ubench"
version = "0.1.0"
edition = "2021"

[features]
disable_upgrade_checks = ["omniglot/unsound", "omniglot/disable_upgrade_checks"]
disable_validation_checks = ["omniglot/unsound", "omniglot/disable_validation_checks"]

[build-dependencies]
bindgen.workspace = true

[dev-dependencies]
criterion = "0.5.1"
sandcrust.workspace = true
serde_json = "1.0.133"

[dependencies]
omniglot.workspace = true
omniglot-mpk = { path = "../../omniglot-mpk" }
env_logger = "0.11.3"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "std"] }

[[bench]]
name = "invoke_ubench"
harness = false

[[bench]]
name = "validation_ubench"
harness = false

[[bench]]
name = "process_startup_demo_nop_unsafe"
harness = false

[[bench]]
name = "process_startup_demo_nop_og_mpk"
harness = false

[[bench]]
name = "process_startup_demo_nop_sandcrust"
harness = false

[[bench]]
name = "process_startup_demo_nop"
harness = false

[[bench]]
name = "upgrade_ubench"
harness = false

[[bench]]
name = "callback_ubench"
harness = false
